Remove http from link

--- a/wi_demo_visualizer.html
+++ b/wi_demo_visualizer.html
@@ -82,8 +82,8 @@
     border-bottom-right-radius: .25em;
   }
 </style>
-  <script src="http://rawgit.com/bemson/subetha/master/subetha.min.js"></script>
-  <script src="http://rawgit.com/bemson/subetha-client-wi/master/subetha-client-wi.min.js"></script>
+  <script src="//rawgit.com/bemson/subetha/master/subetha.min.js"></script>
+  <script src="//rawgit.com/bemson/subetha-client-wi/master/subetha-client-wi.min.js"></script>
   <script src="./src/ball-model.js"></script>
   <script src="./src/ball-ui.js"></script>
   <script>
